    <resources>
    <string name="app_name">Persona App</string>
        <string name="gvimage">todo</string>
        <string name="maintextview">Bu uygulamada Kamerayı kullanabir, Notlarınızı kaydedebilir, Veritabanı işlemlerinizi ve anlık hava durumunu görüntüleyebilirsiniz.</string>
        <string name="exitbtn">Çıkış</string>
        <string name="kamera_kontrol">Kamera Kontrol</string>
        <string name="dosya_name">Dosya Adı</string>
        <string name="notes">Notlarınız...</string>
        <string name="newnote">Yeni kayıt</string>
        <string name="callbacknote">Kaydı getir</string>
        <string name="description">Kaydedilen notlar dosya adı ile çağırılmaktadır.</string>
        <string name="hava_durumbtn">Hava Durumu</string>
        <string name="ses_kontrolbutn">Ses Kontrolü</string>
        <string name="kayser_tr">KAYSERİ, TR</string>
        <string name="_20_april_2021_20_08_pm">20 April 2021, 20:08 PM</string>
        <string name="havanasil">Clear Sky</string>
        <string name="derece">29°C</string>
        <string name="sql_lemleribtn">Sql İşlemleri</string>
        <string name="not_savebtn">Not Kayıt</string>
        <string name="email">Email</string>
        <string name="ad">Ad</string>
        <string name="telefon">Telefon</string>
        <string name="yas">Yaş</string>
        <string name="soyad">Soyad</string>
        <string name="hava_drmbtn">Hava Durumu</string>
        <string name="mainpage">Anasayfa</string>
        <string name="add">Ekle</string>
        <string name="sil">Sil</string>
        <string name="guncelle">Güncelle</string>
        <string name="listele">Listele</string>
        <string name="adres">Adres</string>
        <string name="soundply">soundplay</string>
        <string name="stop">stop</string>
        <string name="bildirim">Bildirim</string>
        <string name="not_saves">Not Kaydı</string>
        <string name="kameragrid">Kamera</string>
        <string name="kameagridview">Kamera Aç</string>
        <string name="ses_kontrolbtn">Ses Kontrolü</string>
        <string name="anasayfabtn">AnaSayfa</string>
    </resources>