<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:flow_horizontalAlign="start"
    app:layout_scrollFlags="scroll"
    tools:context=".personsqlcrud">

    <EditText
        android:id="@+id/edtmail"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttelefon" />

    <EditText
        android:id="@+id/edtad"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ad"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edttelefon"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/telefon"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtyas"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/yas"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtsoyad" />

    <EditText
        android:id="@+id/edtsoyad"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/soyad"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtad" />

    <Button
        android:id="@+id/hd"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/dsn"
        android:text="@string/hava_drmbtn"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Anaekrann"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/dsn"
        android:text="@string/mainpage"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Personadd"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/dsn2"
        android:text="@string/add"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtyas" />

    <Button
        android:id="@+id/Persondelete"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/dsn2"
        android:text="@string/sil"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Personadd" />

    <Button
        android:id="@+id/Personupdate"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/dsn2"
        android:text="@string/guncelle"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtadres" />

    <Button
        android:id="@+id/PersonList"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/dsn2"
        android:text="@string/listele"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Persondelete"
        app:layout_constraintTop_toBottomOf="@+id/Personupdate" />

    <EditText
        android:id="@+id/edtadres"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/adres"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtmail" />

    <TextView
        android:id="@+id/Persontextview"
        android:layout_width="327dp"
        android:layout_height="244dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="24dp"
        android:textAlignment="textStart"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/hd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PersonList"
        app:layout_constraintVertical_bias="0.371" />
</androidx.constraintlayout.widget.ConstraintLayout>