<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/bolge"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="120dp"
        android:text="@string/kayser_tr"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/saatguncelleme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="120dp"
        android:text="@string/_20_april_2021_20_08_pm"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bolge" />


    <TextView
        android:id="@+id/havanasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/havanasil"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/derece"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/derece"
        app:layout_constraintTop_toBottomOf="@+id/saatguncelleme" />

    <TextView
        android:id="@+id/derece"
        android:layout_width="212dp"
        android:layout_height="124dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="412dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/derece"
        android:textColor="#000000"
        android:textSize="90sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/havanasil" />

    <Button
        android:id="@+id/sqlislem"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/dsn"
        android:text="@string/sql_lemleribtn"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/notlar"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="47dp"
        android:background="@drawable/dsn"
        android:text="@string/not_savebtn"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>